--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.1.*"
+        "illuminate/support": "4.1.*",
+        "stillat/common": "1.*"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
@@ -20,10 +21,7 @@
     "autoload": {
         "psr-0": {
             "Stillat\\Menu\\": "src/"
-        },
-        "files": [
-            "src/Stillat/Menu/Support/helpers.php"
-        ]
+        }
     },
     "minimum-stability": "stable"
 }
